# analyzer

./: CMakeLists.txt  README.md  main.cpp
cmake/: CPM.cmake
scripts/: tests.cpp
scripts/lib/: cli.hpp  data_saver.hpp  executor.hpp  lexer.hpp
scripts/src/: cli.cpp  data_saver.cpp  executor.cpp  lexer.cpp
